# automerger

./: .flake8  Makefile  conftest.py  pyproject.toml  setup.py
automerge/: GitHubRequests.py  __init__.py  automerge.py  command_line.py  merger.py
tests/: test_GithubRequests.py  test_automerge.py
tests/utils/: branchlists.py  created_branch.py  created_pull.py  pullists.py
