[tool.poetry]
name = "automerge"
version = "0.1.1"
description = ""
authors = ["M9SCO <chr.grigorii@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
automerge = "automerge.command_line:cli"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
requests = "^2.31.0"
aiohttp = "^3.9.3"
responses = "^0.24.1"
black = "^24.1.1"
flake8 = "^7.0.0"
questionary = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
force-exclude = '''
     \.git/
   | \.venv/
   | \.gitignore/
   | __pycache__/
   | old/
   | build/
   | dist/
   '''