[tool.poetry]
name = "automerge"
version = "0.1.3"
description = ""
authors = ["M9SCO <chr.grigorii@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
automerge = "automerge.command_line:cli"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "7.1.2"
pytest-cov = "^4.1.0"
requests = "2.27.1"
responses = "0.22.0"
black = "23.12.1"
flake8 = "7.0.0"
questionary = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
force-exclude = '''
     \.git/
   | \.venv/
   | \.gitignore/
   | __pycache__/
   | old/
   | build/
   | dist/
   '''